--- a/index.html
+++ b/index.html
@@ -6,77 +6,173 @@
 <title>Portadas de Videojuegos</title>
 <style>
   body {
-    font-family: sans-serif;
-    padding: 20px;
-    background: #f9f9f9;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    background: linear-gradient(135deg, #4c669f, #3b5998, #192f6a);
+    background-size: cover;
+    min-height: 100vh;
+    color: #fff;
   }
-  h1 {
+  header {
     text-align: center;
+    padding: 20px;
+  }
+  header h1 {
+    margin: 0;
+    font-size: 2em;
+    letter-spacing: 1px;
+  }
+  header h1 a {
+    color: #ffd700;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  header h1 a:hover {
+    color: #fff;
   }
   .games-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     gap: 20px;
-    margin-top: 30px;
+    padding: 20px;
+    box-sizing: border-box;
   }
   .game {
-    background: #fff;
-    border-radius: 4px;
-    padding: 10px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 8px;
+    padding: 15px;
     text-align: center;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+  }
+  .game:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
   }
   .game img {
     max-width: 100%;
     height: auto;
     border-radius: 4px;
+    margin-bottom: 10px;
   }
   .game-title {
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
+  }
+  .game-info {
+    margin-top: 5px;
+    font-size: 14px;
+    line-height: 1.4em;
+  }
+  .game-info strong {
+    font-weight: bold;
+    color: #ffd700;
+  }
+  .steam-link {
+    display: inline-block;
+    margin-top: 10px;
+    background: #1b2838;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 14px;
+    transition: background 0.3s;
+  }
+  .steam-link:hover {
+    background: #66c0f4;
   }
 </style>
 </head>
 <body>
-<h1>Portadas de Videojuegos</h1>
+<header>
+  <h1><a href="https://twitch.tv/DrPalanca" target="_blank">Portadas de Videojuegos (DrPalanca)</a></h1>
+</header>
 <div id="games" class="games-container"></div>
 
 <script>
-  // URL del Gist con la lista de juegos (ajusta con tu gist real)
+  // URL del Gist con la lista de juegos
   const GIST_URL = 'https://gist.githubusercontent.com/javipalanca/8c5861a606318afba3d94573836c5212/raw/juegosterminados.txt';
   
-  // Clave de la API de RAWG (obtén la tuya en https://rawg.io/apidocs)
+  // Clave de la API de RAWG
   const RAWG_API_KEY = 'eacbfbc149fe4f4a90fff776bb18be1b';
 
   async function fetchGamesList() {
     const response = await fetch(GIST_URL);
     const text = await response.text();
-    // Cada línea comienza con '* ' y luego el nombre del juego, un " - " y el resto de info
+    // Cada línea comienza con '* ' y luego el nombre del juego, un " - " y el resto
     const lines = text.split('\n').map(l => l.trim()).filter(l => l !== '');
     // Extraemos solo el nombre del juego antes del primer " - "
     return lines.map(line => {
-      // Remover el '* ' inicial
       let cleanLine = line.replace(/^\*\s*/, '');
-      // Tomar la parte antes de " - "
       let gameName = cleanLine.split(' - ')[0];
       return gameName.trim();
     });
   }
 
-  async function fetchGameCover(gameName) {
-    const url = `https://api.rawg.io/api/games?key=${RAWG_API_KEY}&search=${encodeURIComponent(gameName)}`;
-    const response = await fetch(url);
-    const data = await response.json();
-    
-    if (data.results && data.results.length > 0) {
+  async function fetchGameInfo(gameName) {
+    // Primero hacemos la búsqueda
+    let urlSearch = `https://api.rawg.io/api/games?key=${RAWG_API_KEY}&search=${encodeURIComponent(gameName)}`;
+    const resSearch = await fetch(urlSearch);
+    const dataSearch = await resSearch.json();
+
+    if (!dataSearch.results || dataSearch.results.length === 0) {
       return {
-        name: data.results[0].name,
-        image: data.results[0].background_image
+        name: gameName,
+        image: null,
+        publisher: null,
+        year: null,
+        steamUrl: null
       };
-    } else {
-      return { name: gameName, image: null };
     }
+
+    // Tomamos el primer resultado
+    const game = dataSearch.results[0];
+    const gameId = game.id;
+
+    // Ahora consultamos el detalle del juego
+    let urlDetail = `https://api.rawg.io/api/games/${gameId}?key=${RAWG_API_KEY}`;
+    const resDetail = await fetch(urlDetail);
+    const gameDetail = await resDetail.json();
+
+    // Extraer publisher (si existe)
+    let publisher = null;
+    if (gameDetail.publishers && gameDetail.publishers.length > 0) {
+      publisher = gameDetail.publishers[0].name;
+    }
+
+    // Extraer año de lanzamiento del campo released (YYYY-MM-DD)
+    let year = null;
+    if (gameDetail.released) {
+      year = gameDetail.released.split('-')[0];
+    }
+
+    // Buscar store de Steam
+    let steamUrl = null;
+    if (gameDetail.stores && gameDetail.stores.length > 0) {
+      const steamStore = gameDetail.stores.find(s => s.store && s.store.slug === 'steam');
+      if (steamStore) {
+        // El campo "url" en "stores" es relativo, se combina con la base store domain.
+        // Según la API de RAWG, "url" es la URL parcial. De la doc: 
+        // "The URL might be partial (like '/store/app/12345'). You might need to prepend the base store URL."
+        // Sin embargo, en muchos casos url es completa, si no, podemos asumir una URL básica de Steam:
+        // Checamos si es URL absoluta, si no, añadimos https://store.steampowered.com
+        if (!steamStore.url.startsWith('http')) {
+          steamUrl = 'https://store.steampowered.com' + steamStore.url;
+        } else {
+          steamUrl = steamStore.url;
+        }
+      }
+    }
+
+    return {
+      name: gameDetail.name,
+      image: gameDetail.background_image,
+      publisher: publisher,
+      year: year,
+      steamUrl: steamUrl
+    };
   }
 
   async function showGames() {
@@ -84,7 +180,7 @@
     const gamesList = await fetchGamesList();
 
     for (const gameName of gamesList) {
-      const {name, image} = await fetchGameCover(gameName);
+      const {name, image, publisher, year, steamUrl} = await fetchGameInfo(gameName);
       
       const gameDiv = document.createElement('div');
       gameDiv.classList.add('game');
@@ -98,7 +194,7 @@
         const placeholder = document.createElement('div');
         placeholder.textContent = 'Sin imagen disponible';
         placeholder.style.fontStyle = 'italic';
-        placeholder.style.color = '#666';
+        placeholder.style.color = '#eee';
         gameDiv.appendChild(placeholder);
       }
 
@@ -106,6 +202,22 @@
       title.classList.add('game-title');
       title.textContent = name;
       gameDiv.appendChild(title);
+
+      const info = document.createElement('div');
+      info.classList.add('game-info');
+      const pubText = publisher ? `<strong>Editor:</strong> ${publisher}<br>` : '';
+      const yearText = year ? `<strong>Año:</strong> ${year}` : '';
+      info.innerHTML = pubText + yearText;
+      gameDiv.appendChild(info);
+
+      if (steamUrl) {
+        const steamLink = document.createElement('a');
+        steamLink.classList.add('steam-link');
+        steamLink.href = steamUrl;
+        steamLink.target = '_blank';
+        steamLink.textContent = 'Ver en Steam';
+        gameDiv.appendChild(steamLink);
+      }
 
       gamesContainer.appendChild(gameDiv);
     }
