--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   }
   .game img {
     max-width: 100%;
-    height: auto;
+    height: 150px;
     border-radius: 4px;
     margin-bottom: 10px;
   }
