Add YouTube token management and playlist fetching functionality

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 </div>
 
 <script>
-  const GAMES_JSON_URL = 'https://gist.githubusercontent.com/javipalanca/b38d04ce3719759e33d75acc7e1752b7/raw/d1776b713ac31a63b5605259ce6f08809bfe781c/juegosterminados.json'
+  const GAMES_JSON_URL = 'https://gist.githubusercontent.com/javipalanca/b38d04ce3719759e33d75acc7e1752b7/raw/juegosterminados.json';
   let gamesList = []; // To store the fetched games
   const modal = document.getElementById('videosModal');
 
