--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@
         transform: translateY(-5px);
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
       }
+      .game-image-container {
+        width: 100%;
+        height: 280px;
+        overflow: hidden;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
       .game img {
         max-width: 100%;
-        height: 250px;
+        max-height: 100%;
+        object-fit: contain;
         border-radius: 4px;
       }
       .game-title {
@@ -490,11 +500,15 @@
           }
 
           if (cover) {
+            const imageContainer = document.createElement("div");
+            imageContainer.classList.add("game-image-container");
+            
             const img = document.createElement("img");
             img.src = cover;
             img.alt = name;
             img.loading = "lazy"; // Add lazy loading for performance
-            gameDiv.appendChild(img);
+            imageContainer.appendChild(img);
+            gameDiv.appendChild(imageContainer);
           } else {
             const placeholder = document.createElement("div");
             placeholder.textContent = "Sin imagen disponible";
